<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sarı Lacivert Galeri</string>

    <string name="albums">Albümler</string>
    <string name="photos">Fotoğraflar</string>
    <string name="videos">Videolar</string>
    <string name="favorites">Favoriler</string>

    <string name="search">Ara</string>
    <string name="camera">Kamera</string>
    <string name="settings">Ayarlar</string>

    <string name="copy">Kopyala</string>
    <string name="move">Taşı</string>
    <string name="share">Paylaş</string>
    <string name="delete">Sil</string>
    <string name="trash">Çöp Kutusu</string>

    <string name="duplicates">Çift ve Benzer Fotoğraflar</string>
    <string name="scan_duplicates">Çift/benzer medya tara</string>

    <string name="slideshow">Slayt Gösterisi</string>
    <string name="sort">Sırala</string>
    <string name="filter">Filtrele</string>

    <string name="permission_required">Galeriye erişmek için medya izni gerekiyor.</string>
    <string name="no_media">Medya bulunamadı.</string>

</resources>
